--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -12,7 +12,7 @@ nav {
 
   .logo {
     img {
-      height: 1em;
+      height: 1.5em;
     }
   }
 
