--- a/_sass/p2pustrap/_variables.scss
+++ b/_sass/p2pustrap/_variables.scss
@@ -362,7 +362,7 @@ $container-lg:                 $container-large-desktop;
 //##
 
 // Basics of a navbar
-$navbar-height:                    61px;
+$navbar-height:                    64px;
 $navbar-margin-bottom:             $line-height-computed;
 $navbar-border-radius:             $border-radius-base;
 $navbar-padding-horizontal:        floor(($grid-gutter-width / 2));
